Fixes for create Item

--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -214,7 +214,7 @@
                             <Input @bind-Value="@context.SaleableQuantity"></Input>
                         </PropertyColumn>
                         <PropertyColumn Title="@L["PreorderQuantity"]" Property="item=>item.PreOrderableQuantity">
-                            <Input @bind-Value="@context.SaleableQuantity"></Input>
+                            <Input @bind-Value="@context.PreOrderableQuantity"></Input>
                         </PropertyColumn>
                         <PropertyColumn Title="@L["SaleablePreorderQuantity"]" Property="item=>item.SaleablePreOrderQuantity">
                             <Input @bind-Value="@context.SaleablePreOrderQuantity"></Input>
