--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -116,6 +116,9 @@
                             <span class="ql-formats">
                                 <button class="ql-image"></button>
                             </span>
+                             <span class="ql-formats">
+                                <button class="ql-video"></button>
+                            </span>
                         </ToolbarContent>
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
