--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -6,7 +6,7 @@
 @using Pikachu.Localization;
 @using Microsoft.Extensions.Localization;
 @using System.ComponentModel
-@using AntDesign.TableModels
+
 
 @inject IItemAppService AppService
 @inject NavigationManager NavigationManager
@@ -51,7 +51,7 @@
                 <label>@L["ItemName"]</label>
             </div>
             <div class="col-9">
-                <Input @bind-Value="@createItemDto.ItemName" MaxLength="@maxtextCount" />
+                <TextEdit @bind-bind-Text="@createItemDto.ItemName" MaxLength="@maxtextCount" />
             </div>
             <div class="col-1">
                 <span>
@@ -64,7 +64,7 @@
                 <label>@L["ItemImage"]</label>
             </div>
             <div class="col-10 row">
-                <Upload Action="https://www.mocky.io/v2/5cc8019d300000980a055e76"
+              @*   <Upload Action="https://www.mocky.io/v2/5cc8019d300000980a055e76"
                         Name="avatar"
                 @bind-FileList="itemImageList"
                         ListType="picture-card"
@@ -74,7 +74,7 @@
                         <Icon Type="plus"></Icon>
                         <div className="ant-upload-text">@L["Upload"]</div>
                     </div>
-                </Upload>
+                </Upload> *@
             </div>
         </div>
         <div class=" col-12 row">
@@ -84,7 +84,7 @@
             <div class="col-9">
                 <div class="col-12">
                     <fieldLabel></fieldLabel>
-                    <Input Placeholder="@L["ItemDescriptionTitle"]" @bind-Value="@createItemDto.ItemDescriptionTitle" />
+                    <TextEdit Placeholder="@L["ItemDescriptionTitle"]" @bind-bind-Text="@createItemDto.ItemDescriptionTitle" />
                 </div>
                 <div class=" col-12">
                     <Blazored.TextEditor.BlazoredTextEditor @ref="@quillHtml">
@@ -135,7 +135,7 @@
                 <fieldLabel>@L["ItemTags"]</fieldLabel>
             </div>
             <div class="col-10">
-                @foreach (var tag in itemTags)
+           @*      @foreach (var tag in itemTags)
                 {
                     <Tag @key="tag" Closable OnClose="()=>OnTagClose(tag)">@tag</Tag>
                 }
@@ -148,7 +148,7 @@
                     <Tag Class="site-tag-plus" OnClick="@(() => tagInputVisible = !tagInputVisible)">
                         <Icon Type="plus" />@L["NewTag"]
                     </Tag>
-                }
+                } *@
             </div>
         </div>
         <div class="col-12 row">
@@ -156,15 +156,15 @@
                 <label>@L["ItemStyle"]</label>
             </div>
             <div class="col-10">
-                @foreach (var customeField in customeFields)
-                {
+             @*    @foreach (var customeField in customeFields)
+                { *@
                     <div style="margin:7px; border: 1px solid #cccccc;">
                         <div>
-                            <Input Placeholder="@L["ItemStyleKey"]" @bind-Value="@customeField.Name"/>
+                          @*   <TextEdit Placeholder="@L["ItemStyleKey"]" @bind-Text="@customeField.Name"/> *@
                         </div>
                         <div style="padding-left:33px" class="row">
                             <div class="col-11" style="background-color:white">
-                                 @foreach (var tag in customeField.ItemTags)
+                             @*     @foreach (var tag in customeField.ItemTags)
                                           {
                                               <Tag @key="tag" Closable OnClose="()=>OnCustomFieldTagClose(customeField.Id, tag)">@tag</Tag>
                                           }
@@ -177,14 +177,15 @@
                                               <Tag Class="site-tag-plus" OnClick="@(() => customeField.TagInputVisible = !customeField.TagInputVisible)">
                                                   <Icon Type="plus" />@L["NewTag"]
                                               </Tag>
-                                          }
+                                          } *@
                             </div>
                             <div class="col-1">
-                                <Button Danger Type="@ButtonType.Primary" Icon="@IconType.Outline.Delete" OnClick="()=>DeleteCustomeField(customeField)"/>
+                                @* <Button Danger Type="@ButtonType.Primary" Icon="@IconType.Outline.Delete" OnClick="()=>DeleteCustomeField(customeField)"/> *@
                             </div>
                         </div>
-                    </Div>
-                }
+                       </div>
+               @*  } *@
+              
                 <div style="padding:0px 3px;">
                     <Button OnClick="AddCustomeField">@L["AddItemStyleButton"]</Button>
                 </div>
@@ -196,7 +197,7 @@
             </div>
             <div class="col-10">
                 <div>
-                    <Table TItem="CreateItemDetailsDto"
+               @*      <Table TItem="CreateItemDetailsDto"
                            DataSource="@itemDetailList"
                            Size="TableSize.Small"
                            Bordered=@true
@@ -223,7 +224,7 @@
                         <PropertyColumn Title="@L["SaleablePreorderQuantity"]" Property="item=>item.SaleablePreOrderQuantity">
                             <Input @bind-Value="@context.SaleablePreOrderQuantity"></Input>
                         </PropertyColumn>
-                    </Table>
+                    </Table> *@
                 </div>
             </div>
         </div>
@@ -237,10 +238,10 @@
                         <label>@L["TimeLimitPeriod"]</label>
                     </div>
                     <div class="col-3">
-                        <DatePicker  @bind-Value="createItemDto.LimitAvaliableTimeStart" Style="width:100%" Placeholder="@L["StartDate"].ToString()" TValue="DateTime" Picker="@DatePickerType.Date" />
+                        <DateEdit  @bind-Date="createItemDto.LimitAvaliableTimeStart" Style="width:100%" Placeholder="@L["StartDate"].ToString()" TValue="DateTime"  />
                     </div>
                     <div class="col-3">
-                        <DatePicker @bind-Value="createItemDto.LimitAvaliableTimeEnd" Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime" Picker="@DatePickerType.Date" />
+                        <DateEdit @bind-Date="createItemDto.LimitAvaliableTimeEnd" Style="width:100%" Placeholder="@L["EndDate"].ToString()" TValue="DateTime"  />
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -248,7 +249,7 @@
                         <label>@L["LimitQuantity"]</label>
                     </div>
                     <div class="col-3">
-                        <Input @bind-Value="@createItemDto.LimitQuantity" />
+                        <InputNumber TValue="int" @bind-Value="@createItemDto.LimitQuantity" />
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -256,7 +257,7 @@
                         <label>@L["ShareProfit"]</label>
                     </div>
                     <div class="col-3">
-                        <Input @bind-Value="@createItemDto.ShareProfit" />
+                        <InputNumber TValue="float" @bind-Value="@createItemDto.ShareProfit" />
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -264,7 +265,7 @@
                         <label>@L["FreeShipping"]</label>
                     </div>
                     <div class="col-3">
-                        <Switch @bind-Value="@createItemDto.IsFreeShipping"></Switch>
+                        <Switch TValue="bool" @bind-Checked="@createItemDto.IsFreeShipping"></Switch>
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -272,7 +273,7 @@
                         <label>@L["Returnable"]</label>
                     </div>
                     <div class="col-3">
-                        <Switch @bind-Value="@createItemDto.IsReturnable"></Switch>
+                        <Switch TValue="bool" @bind-Checked="createItemDto.IsReturnable"></Switch>
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -280,7 +281,7 @@
                         <label>@L["ShippingMethod"]</label>
                     </div>
                     <div class="col-3">
-                        <Select TItem="EnumValueDto"
+                      @*   <Select TItem="EnumValueDto"
                                 DataSource="@shippingMethods"
                                 LabelName="@nameof(EnumValueDto.Text)"
                                 ValueName="@nameof(EnumValueDto.Id)"
@@ -289,7 +290,7 @@
                                 TItemValue="int"
                                 OnSelectedItemChanged="ItemSippingMethodHandleChange"
                                                     EnableSearch>
-                        </Select>
+                        </Select> *@
                     </div>
                 </div>
                 <div class="col-12 row">
@@ -297,7 +298,7 @@
                         <label>@L["TaxType"]</label>
                     </div>
                     <div class="col-3">
-                        <Select TItem="EnumValueDto"
+                     @*    <Select TItem="EnumValueDto"
                                 DataSource="@taxTypes"
                                 LabelName="@nameof(EnumValueDto.Text)"
                                 ValueName="@nameof(EnumValueDto.Id)"
@@ -306,15 +307,15 @@
                                 TItemValue="int"
                                 OnSelectedItemChanged="ItemTaxTypeHandleChange"
                                                     EnableSearch>
-                        </Select>
+                        </Select> *@
                     </div>
                 </div>
             </div>
         </div>
         <div style="text-align: center; margin-top:5px ;">
-            <Button Danger Type="@ButtonType.Primary" Style="margin-right:5px">@L["Cancel"]</Button>
-            <Button Type="@ButtonType.Primary" Style="margin-right:5px" OnClick="CreateEntityAsync">@L["Save"]</Button>
-            <Button Type="@ButtonType.Primary" Style="margin-right:5px; background-color:skyblue">@L["Preview"]</Button>
+            <Button Danger Type="@ButtonType.Button" Style="margin-right:5px">@L["Cancel"]</Button>
+            <Button Type="@ButtonType.Button" Style="margin-right:5px" OnClick="CreateEntityAsync">@L["Save"]</Button>
+            <Button Type="@ButtonType.Button" Style="margin-right:5px; background-color:skyblue">@L["Preview"]</Button>
 
         </div>
     </div>
